--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Unik | Social sharing reinvented</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123741446-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123741446-1');
+  </script>
+  <!-- Google tag end -->
 </head>
 <body>
   <nav>
